Fixes #3510 (#3516)
* fix: update sidebar z-index to fix overlapping

* chore: generate minified files

* fix: update .scss file

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -19146,6 +19146,10 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
   color: white;
 }
 
+.bd-vars + .bd-vars {
+  margin-top: var(--docs-inner);
+}
+
 .bd-var {
   display: flex;
   flex-wrap: wrap;
@@ -19713,7 +19717,7 @@ a.has-text-bootstrap-dark:hover, a.has-text-bootstrap-dark:focus {
 .bd-docs-nav, .bd-docs-side {
   background-color: #fafafa;
   width: 11.25rem;
-  z-index: 3;
+  z-index: 31;
 }
 
 .bd-docs-toggles {
